# django-management-commands

./: .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .prettierrc.yaml  noxfile.py  package-lock.json  package.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
.github/: CODEOWNERS  codecov.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  3-documentation.yml  4-refactoring-performance.yml  config.yml
.github/workflows/: package-cd.yml  package-ci.yml  semantic-pr.yml
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
src/management_commands/: conf.py  core.py  exceptions.py  management.py
tests/: test_conf.py  test_core.py  test_management.py
